cities, countrys & types of doctors

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -18,7 +18,8 @@
             <a href="{{ url('admin_users') }}">Les utilisateurs</a><br>
             <a href="{{ url('admin_doctors') }}">Les médecins</a> <br>
             <a href="{{ url('admin_rendez_vous') }}">Les rendez-vous</a> <br>
-            <a href="{{ url('admin_reserver_rendez_vous') }}">Réserver un rendez-vous</a>
+            <a href="{{ url('admin_reserver_rendez_vous') }}">Réserver un rendez-vous</a> <br>
+            <a href="{{ url('admin_countrys') }}">Pays et ville</a>
         </div>
     </div>
 {% endblock %}
