--- a/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
@@ -10,7 +10,9 @@
         </div>
     </div>
 </div>
-
+<script>
+    // jQuery = $
+</script>
 <div class="container-fluid row p-5">
     {% if user.is_doctor %}
         <div class="col-lg-2"></div>
