--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -37,7 +37,7 @@
             {{ form_rest(form) }}
             <br>
             <div>
-                <input type="submit" class="form-control btn-primary btn-block" value="Inscription" />
+                <input type="submit" class="form-control genric-btn success btn-block" value="Inscription" />
             </div>
         {{ form_end(form) }}
         <br>
