--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -11,7 +11,15 @@
     </div>
 </div>
 {% if error %}
-    <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+    <br><br>
+    <div class="container-fluid row text-center">
+        <div class="col-lg-5"></div>
+        <div class="col-lg-2">
+            <div class="alert alert-danger">
+                <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            </div>
+        </div>
+    </div>
 {% endif %}
 <div class="container-fluid row p-5">
     <div class="col-md-4"></div>
@@ -31,7 +39,7 @@
 {#            <input type="checkbox" class="form-control" id="remember_me" name="_remember_me" value="on" />#}
 {#            <label for="remember_me">{{ 'security.login.remember_me'|trans }}</label>#}
 
-            <input type="submit" class="form-control btn-primary btn-block" id="_submit" name="_submit" value="Connexion" />
+            <input type="submit" class="form-control genric-btn success btn-block" id="_submit" name="_submit" value="Connexion" />
         </form>
         <br>
         <div class="text-center">ou <a href="{{ url('fos_user_registration_register') }}" class="text-success">s'inscrire</a></div>
