--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -9,7 +9,7 @@
                 <div class="row align-items-center justify-content-center">
                     <div class="col-lg-7 col-md-6">
                         <div class="slider_text">
-                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Yaya - Punchline</h3>
+                            <h3 class="wow fadeInRight" data-wow-duration="1s" data-wow-delay=".1s">Trouve le médecin pour tes cousins</h3>
                             <div class="sldier_btn wow fadeInLeft" data-wow-duration="1s" data-wow-delay=".2s">
                                 <a href="#" class="boxed-btn3">Trouver un médecin</a>
                             </div>
@@ -18,25 +18,27 @@
                     <div class="col-lg-5 col-md-6">
                         <div class="payment_form white-bg wow fadeInDown" data-wow-duration="1.2s" data-wow-delay=".2s">
                             <div class="info text-center">
-                                <h4>How much do you want?</h4>
-                                <p>We provide online instant cash loans with quick</p>
+                                <h4>Trouver <b>le médecin</b></h4>
+                                <p>En deux clics</p>
                             </div>
                             <div class="form">
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="single_input">
                                             <select class="wide form-control">
-                                                <option data-display="Amount">Amount</option>
-                                                <option value="1">$10</option>
-                                                <option value="2">$40</option>
-                                                <option value="3">$50</option>
+                                                <option data-display="Amount">Type de médecin</option>
+                                                {% for type in typesDoctor %}
+                                                    <option value="{{ type.id }}">{{ type.name }}</option>
+                                                {% endfor %}
                                             </select>
                                         </div>
                                     </div>
+                                    <p></p>
                                     <div class="col-lg-12">
                                         <div class="single_input">
+                                            {{ dump(countrys[0].cities) }}
                                             <select class="wide form-control">
-                                                <option data-display="Month">Month</option>
+                                                <option data-display="Month">Ville</option>
                                                 <option value="1">3 Month</option>
                                                 <option value="2">6 Month</option>
                                                 <option value="3">9 Month</option>
@@ -46,9 +48,10 @@
                                     </div>
                                 </div>
                             </div>
-                            <p>You have to pay: <span>$0</span></p>
+{#                            <p>You have to pay: <span>$0</span></p>#}
+                            <p></p>
                             <div class="submit_btn">
-                                <button class="boxed-btn3" type="submit">Continue</button>
+                                <button class="boxed-btn3" type="submit">Voir la liste</button>
                             </div>
                         </div>
                     </div>
