--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -36,7 +36,8 @@
                                     <p></p>
                                     <div class="col-lg-12">
                                         <div class="single_input">
-                                            {{ dump(countrys[0].cities) }}
+                                            {{ dump(countrys[0]) }}
+                                            {{ dump(countrys[0].cities[0]) }}
                                             <select class="wide form-control">
                                                 <option data-display="Month">Ville</option>
                                                 <option value="1">3 Month</option>
