homepage form OK

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,6 +16,9 @@
                     text-transform: none !important;
                 }
             </style>
+            <link href="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/css/select2.min.css" rel="stylesheet" />
+            <script src="{{'build/js/vendor/jquery-1.12.4.min.js'}}"></script>
+            <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
         {% endblock %}
     </head>
     <body>
@@ -86,7 +89,6 @@
 {#            {{ encore_entry_script_tags('app') }}#}
 
             <script src="{{'build/js/vendor/modernizr-3.5.0.min.js'}}"></script>
-            <script src="{{'build/js/vendor/jquery-1.12.4.min.js'}}"></script>
             <script src="{{'build/js/popper.min.js'}}"></script>
             <script src="{{'build/js/bootstrap.min.js' }}"></script>
             <script src="{{'build/js/owl.carousel.min.js' }}"></script>
