--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -25,35 +25,56 @@
                                 <div class="row">
                                     <div class="col-lg-12">
                                         <div class="single_input">
-                                            <select class="wide form-control">
-                                                <option data-display="Amount">Type de médecin</option>
+                                            <select class="form-control wide js-example-tags" id="selectTypeDoctor">
                                                 {% for type in typesDoctor %}
                                                     <option value="{{ type.id }}">{{ type.name }}</option>
                                                 {% endfor %}
                                             </select>
+                                            <script>
+                                                $(".js-example-tags").select2({
+                                                    tags: true
+                                                });
+                                            </script>
                                         </div>
                                     </div>
-                                    <p></p>
+                                    <br><br>
                                     <div class="col-lg-12">
                                         <div class="single_input">
-                                            {{ dump(countrys[0]) }}
-                                            {{ dump(countrys[0].cities[0]) }}
-                                            <select class="wide form-control">
-                                                <option data-display="Month">Ville</option>
-                                                <option value="1">3 Month</option>
-                                                <option value="2">6 Month</option>
-                                                <option value="3">9 Month</option>
-                                                <option value="4">12 Month</option>
+                                            <select class="form-control js-example-basic-single" name="city" id="selectCity">
+                                                {% for country in countrys %}
+                                                    <optgroup label="{{ country.name }}">
+                                                        {% for city in country.cities %}
+                                                            <option value="{{ city.id }}">{{ city.name }}</option>
+                                                        {% endfor %}
+                                                    </optgroup>
+                                                {% endfor %}
                                             </select>
+                                            <script>
+                                                $(document).ready(function() {
+                                                    $('.js-example-basic-single').select2({
+                                                        placeholder: "Ville"
+                                                    });
+                                                });
+                                            </script>
                                         </div>
                                     </div>
                                 </div>
                             </div>
-{#                            <p>You have to pay: <span>$0</span></p>#}
                             <p></p>
                             <div class="submit_btn">
-                                <button class="boxed-btn3" type="submit">Voir la liste</button>
+                                <button class="boxed-btn3" type="submit" id="SeeListDoctors">Voir la liste</button>
                             </div>
+                            <script>
+                                $(document).ready(function(){
+                                    $("#SeeListDoctors").click(function() {
+                                        selectedCountry = $("#selectCity option:selected").val();
+                                        selectedType = $("#selectTypeDoctor option:selected").val();
+
+                                        url = "{{ url('homepage') }}search/" + selectedType + "/" + selectedCountry;
+                                        window.location.replace(url)
+                                    })
+                                })
+                            </script>
                         </div>
                     </div>
                 </div>
