mes prestations doctor

--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -17,6 +17,7 @@
         <div class="col-lg-6 text-center">
             <a href="{{ url('admin_users') }}">Les utilisateurs</a><br>
             <a href="{{ url('admin_doctors') }}">Les médecins</a> <br>
+            <a href="{{ url('admin_type_doctor') }}">Type de médecins</a><br>
             <a href="{{ url('admin_rendez_vous') }}">Les rendez-vous</a> <br>
             <a href="{{ url('admin_reserver_rendez_vous') }}">Réserver un rendez-vous</a> <br>
             <a href="{{ url('admin_countrys') }}">Pays et ville</a>
