--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,3 +1,11 @@
 body {
     background-color: lightgray;
 }
+
+.padding_top {
+    padding-top: 150px;
+}
+
+.padding_bottom {
+    padding-bottom: 150px;
+}
