--- a/templates/admin/doctors.html.twig
+++ b/templates/admin/doctors.html.twig
@@ -34,7 +34,7 @@
                         <td>{{ user.username }}</td>
                         <td><a style="color: white" href="mailto:{{ user.email }}">{{ user.email }}</a></td>
                         <td><a style="color: white" href="telto:{{ user.phone_number }}">{{ user.phone_number }}</a></td>
-                        <td>{{ user.type_doctor }}</td>
+                        <td>{{ dump(user.type_doctor) }}</td>
                         <td>{{ user.price }}</td>
                         <td><a href="{{ url('admin_edit_doctor', {id: user.id}) }}" class="text-info">Modifier</a> | <a class="text-danger" href="{{ url('admin_delete_user', {id: user.id}) }}">Supprimer</a></td>
                     </tr>
