--- a/templates/bundles/FOSUserBundle/Profile/infoDoctor.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/infoDoctor.html.twig
@@ -1,60 +1,82 @@
 {% form_theme form 'bootstrap_4_layout.html.twig' %}
-{{ form(form, {'method' : 'POST', 'action': path('info_doctor') }) }}
+<style type="text/css">
+    .modal-backdrop {
+        z-index: 0;
+    }
+</style>
+<div class="apply_form_area" style="padding-top: inherit">
+    <div class="apply_form">
+        {{ form(form, {'method' : 'POST', 'action': path('info_doctor') }) }}
 
-<select class="ui fluid search dropdown" multiple="" >
-    <option value="">State</option>
-    <option value="AL">Alabama</option>
-    <option value="AK">Alaska</option>
-    <option value="AZ">Arizona</option>
-    <option value="AR">Arkansas</option>
-    <option value="CA">California</option>
-    <option value="CO">Colorado</option>
-    <option value="CT">Connecticut</option>
-    <option value="DE">Delaware</option>
-    <option value="DC">District Of Columbia</option>
-    <option value="FL">Florida</option>
-    <option value="GA">Georgia</option>
-    <option value="HI">Hawaii</option>
-    <option value="ID">Idaho</option>
-    <option value="IL">Illinois</option>
-    <option value="IN">Indiana</option>
-    <option value="IA">Iowa</option>
-    <option value="KS">Kansas</option>
-    <option value="KY">Kentucky</option>
-    <option value="LA">Louisiana</option>
-    <option value="ME">Maine</option>
-    <option value="MD">Maryland</option>
-    <option value="MA">Massachusetts</option>
-    <option value="MI">Michigan</option>
-    <option value="MN">Minnesota</option>
-    <option value="MS">Mississippi</option>
-    <option value="MO">Missouri</option>
-    <option value="MT">Montana</option>
-    <option value="NE">Nebraska</option>
-    <option value="NV">Nevada</option>
-    <option value="NH">New Hampshire</option>
-    <option value="NJ">New Jersey</option>
-    <option value="NM">New Mexico</option>
-    <option value="NY">New York</option>
-    <option value="NC">North Carolina</option>
-    <option value="ND">North Dakota</option>
-    <option value="OH">Ohio</option>
-    <option value="OK">Oklahoma</option>
-    <option value="OR">Oregon</option>
-    <option value="PA">Pennsylvania</option>
-    <option value="RI">Rhode Island</option>
-    <option value="SC">South Carolina</option>
-    <option value="SD">South Dakota</option>
-    <option value="TN">Tennessee</option>
-    <option value="TX">Texas</option>
-    <option value="UT">Utah</option>
-    <option value="VT">Vermont</option>
-    <option value="VA">Virginia</option>
-    <option value="WA">Washington</option>
-    <option value="WV">West Virginia</option>
-    <option value="WI">Wisconsin</option>
-    <option value="WY">Wyoming</option>
-</select>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-validator/0.5.3/js/bootstrapValidator.js"></script>
+        <script>
+            $(document).ready(function() {
+                $('.js-example-basic-multiple').select2({
+                    placeholder: "Choisir"
+                });
+            });
+        </script>
+
+        <br><br>
+        <div class="text-center">
+            <h4>Mes prestations</h4><br>
+
+            {% if (user.prestations | length == 0) %}
+                Vous n'avez pas encore ajouté de prestation.
+
+            {% else %}
+                {% for prestation in user.prestations %}
+                    <div class="row" style="padding-bottom: 5px; text-align: left;">
+                        <div class="col-lg-3"><b>{{ prestation.price }} €</b></div>
+                        <div class="col-lg-6 text-center">
+                            <b>{{ prestation.name }}</b>
+                        </div>
+                        <div class="col-lg-3">
+                            <a href="{{ url('edit_prestation', {id: prestation.id}) }}" style="margin-left: 20px"><b><i class="ti-pencil"></i></b></a>
+                            <a href="{{ url('delete_prestation', {id: prestation.id}) }}" style="margin-left: 20px"><b><i class="ti-trash"></i></b></a>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-lg-12">{{ prestation.description }}</div>
+                    </div><br>
+                {% endfor %}
+            {% endif %}
+            <br><br>
+            <button type="button" class="btn btn-block btn-primary btn" data-toggle="modal" data-target="#addPresta">Ajouter une prestation</button>
+
+
+        </div>
+
+    </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="addPresta" tabindex="-1" role="dialog" aria-labelledby="addPrestaLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ajouter une prestation</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            {% form_theme formPrestation 'bootstrap_4_layout.html.twig' %}
+            {{ form_start(formPrestation, {'method' : 'POST', 'action': path('info_doctor') }) }}
+            <div class="modal-body">
+                {{ form_errors(formPrestation) }}
+
+                {{ form_row(formPrestation.name) }}
+
+                {{ form_row(formPrestation.description) }}
+                {{ form_row(formPrestation.price) }}
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Annuler</button>
+                {{ form_widget(formPrestation.Ajouter) }}
+            </div>
+            {{ form_end(formPrestation) }}
+        </div>
+    </div>
+</div>
 
 <script>
     // Using this tutorial for autocomplete address : https://www.youtube.com/watch?v=Rpzp0yCAmq4
