--- a/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Profile/show_content.html.twig
@@ -20,21 +20,24 @@
     {% endif %}
     <div class="col-lg-4">
         {% if user.is_doctor %}
-            <p style="font-size: 22px; background-color: #e6f1ff;" class="form-control text-center"><b>Médecin</b></p><br>
+            <p style="font-size: 22px;" class="form-control text-center"><b>Médecin</b></p><br>
             {{ render(controller('App\\Controller\\DefaultController::infoDoctorAction')) }}
         {% endif %}
     </div>
     <div class="col-lg-4 text-center">
-        <p style="font-size: 22px; background-color: #e6f1ff;" class="form-control"><b>Nom et prénom</b> : {{ user.username }}</p><br>
-        <p style="font-size: 22px; background-color: #e6f1ff;" class="form-control"><b>{{ 'profile.show.email'|trans }}</b> : {{ user.email }}</p><br>
-        <a href="{{ url('fos_user_profile_edit') }}" class="btn btn-outline-success btn-block">Modifier</a><br>
+        <div class="form-control">
+            <p style="font-size: 22px;" class=""><b>{{ user.username }}</b></p>
+            <p style="font-size: 22px;" class="">{{ user.email }}</p><br>
+            <a href="{{ url('fos_user_profile_edit') }}" class="btn btn-outline-success btn-block">Modifier</a><br>
 
-        <a href="{{ url('fos_user_change_password') }}" class="btn btn-danger btn-block">Modifier votre mot de passe</a><br><br>
+            <a href="{{ url('fos_user_change_password') }}" class="btn btn-danger btn-block">Modifier votre mot de passe</a><br>
+            <hr class="solid border-bottom">
 
-        <hr class="solid border-bottom">
-        <br><br>
-        <p style="font-size: 22px; background-color: #e6f1ff;" class="form-control"><b>Numéro de téléphone</b> : {{ user.phone_number }}
-            <a href="{{ url('profile_edit_phone') }}" style="margin-left: 20px"><b><i class="ti-pencil"></i></b></a></p><br>
+            <p style="font-size: 22px;" class="">{{ user.phone_number }}
+                <a href="{{ url('profile_edit_phone') }}" style="margin-left: 20px"><b><i class="ti-pencil"></i></b></a>
+            </p>
+        </div>
+
+
     </div>
 </div>
-{{ dump(user) }}
