--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -48,7 +48,7 @@
                                                     <li><a href="#">Mes informations <i class="ti-angle-down"></i></a>
                                                         <ul class="submenu">
                                                             <li><a href="{{ url('fos_user_profile_show') }}">Mon profil</a></li>
-                                                            <li><a href="#">Mes rendez-vous</a></li>
+                                                            <li><a href="{{ url('mes_rendez_vous') }}">Mes rendez-vous</a></li>
                                                         </ul>
                                                     </li>
                                                     {% endif %}
