--- a/templates/appointment/rendez_vous_individuel.html.twig
+++ b/templates/appointment/rendez_vous_individuel.html.twig
@@ -25,48 +25,17 @@
             {% if appointment.state == constant('App\\Entity\\Appointment::STATUS_UNPAID') %}
                 <em>Le paiement n'a pas été pré-autorisé. Cliquez ici pour le faire : <a class="text-danger" href="{{ url('reserver_payer', {"idAppointment": appointment.id}) }}">autoriser le prélévement</a></em>
             {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_PAID') %}
-                <em>Aucune date n'a été fixée pour le moment. <a class="text-danger" href="#">Proposer une date</a></em>
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_WAITING_FOR_PATIENT') %}
-                <em>Le médecin a proposer une date. <a href="#">Valider ou refuser</a></em>
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_WAITING_FOR_DOCTOR') %}
-                <em>Vous avez proposé une date mais le médecin n'a pas encore répondu</em>
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_REFUSED_BY_PATIENT') %}
-                <em>Vous avez refusé la date proposé par le médecin, nous attendons qu'il en propose une nouvelle. Vous pouvez aussi <a class="text-danger" href="#">proposer une date</a>. </em>
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_ACCEPTED_BY_PATIENT') %}
-                <em>La date a été fixée.</em>
-            {% else %}
-                <em>Le rendez-vous a bien eu lieu. <a class="text-danger" href="#">Déclarer une erreur</a></em>
+{#                <em><a class="text-danger" href="#">Déclarer une erreur</a></em>#}
             {% endif %}
         </div>
         <div class="col-lg-1"></div>
         <div class="col-lg-4">
-            <h2>Date et créneau</h2>
-            {% if form is defined %}
-                {% form_theme form 'bootstrap_4_layout.html.twig' %}
-            {% endif %}
+            <h2>Le patient</h2>
+            Coordonnées du patient - prix recap etc.
             {% if appointment.state == constant('App\\Entity\\Appointment::STATUS_UNPAID') %}
                 <em>Le paiement doit être autorisé avant de fixer une date. <a class="text-danger" href="{{ url('reserver_payer', {"idAppointment": appointment.id}) }}">Autoriser le prélévement</a></em>
             {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_PAID') %}
-                <em>Aucune date n'a été fixée pour le moment. <a class="text-danger" href="#">Proposer une date</a></em>
                 <br><br>
-                {{ form(form) }}
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_WAITING_FOR_PATIENT') %}
-                <em>Le médecin a proposer une date.</em><br>
-                {{ appointment.scheduleByDoctor |date("\\L\\e m/d/y \\à g:i") }}
-                {{ form(form) }}
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_WAITING_FOR_DOCTOR') %}
-                <em>En attente de la réponse du médecin.</em>
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_REFUSED_BY_PATIENT') %}
-                <em>Vous pouvez proposer une nouvelle date.</em>
-                <br><br>
-                {{ form(form) }}
-            {% elseif appointment.state == constant('App\\Entity\\Appointment::STATUS_ACCEPTED_BY_PATIENT') %}
-                <em>Le rendez-vous est prévu pour le {{ appointment.finalSchedule |date("\\L\\e m/d/y \\à g:i") }}</em>
-                <a class="btn btn-success" href="{{ url('confirmer_rendez_vous_done', {'id': appointment.id}) }}">Le rendez-vous a bien eu lieu</a>
-                <a class="btn btn-outline-danger" href="#">Signaler un problème</a>
-            {% else %}
-                <em>Le rendez-vous a bien eu lieu le {{ appointment.finalSchedule |date("\\L\\e m/d/y \\à g:i") }}</em>
-                <br>
                 <a class="btn btn-outline-danger" href="#">Signaler un problème</a>
             {% endif %}
         </div>
